JDK 11: forward module-related flags from cycle finder to J2ObjC.
	Change on 2019/04/24 by antoniocortes <antoniocortes@google.com>

-------------
Created by MOE: https://github.com/google/moe
MOE_MIGRATED_REVID=245037895